--- a/email-post.html
+++ b/email-post.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="http://global.rakuten.com/en/favicon.ico">
+    <link rel="icon" href="//global.rakuten.com/en/favicon.ico">
 
     <title>HelpMeChoose - Email</title>
 
 <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="/suggestc/import/css/custom-css.css" rel="stylesheet">
+    <link href="./css/custom-css.css" rel="stylesheet">
 
     <style type="text/css">
 
@@ -46,7 +46,7 @@
         }
 </style>
 
-<script type="text/javascript" src="../functions/fb-script.js"></script>
+
 
   </head>
 
@@ -61,17 +61,18 @@
             <li role="presentation" class="active">
                 <a href="./email-post.html" class="btn"><span class="glyphicon glyphicon-envelope"></span> Email</a>
             </li>
-            <li role="presentation"><a href="#">About</a></li>
+            <li role="presentation"><a href="./about.html" target="_blank" class="btn"><span class="glyphicon glyphicon-registration-mark"></span> About</a></li>
             <li role="presentation"><a href="#">How-to</a></li>
+
           </ul>
         </nav>
-        <h3 class="text-muted"> <img style="width:190px;height:70px;" src="//localhost/suggestc/pluginassets/logo.png"> </h3>
+        <h3 class="text-muted"> <img style="width:190px;height:70px;" src="//hmc.herokuapp.com/pluginassets/logo.png"> </h3>
       </div>
 
       <div class="jumbotron">
 
         <h2 style="color:#3b5998;">
-        <img width="50px" height="50px;" src="http://icons.iconarchive.com/icons/graphicloads/100-flat-2/256/email-icon.png">
+        <img width="50px" height="50px;" src="//icons.iconarchive.com/icons/graphicloads/100-flat-2/256/email-icon.png">
         Email</h2>
         <p class="lead">Use the Email service to ask anyone to help you choose the products you want to buy.</p>
         <p>
