--- a/fb-post.html
+++ b/fb-post.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="http://global.rakuten.com/en/favicon.ico">
+    <link rel="icon" href="//global.rakuten.com/en/favicon.ico">
 
     <title>HelpMeChoose - Facebook</title>
 
 <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="/suggestc/import/css/custom-css.css" rel="stylesheet">
+    <link href="./css/custom-css.css" rel="stylesheet">
 
     <style type="text/css">
 
@@ -29,7 +29,7 @@
         }
 </style>
 
-<script type="text/javascript" src="../functions/fb-script.js"></script>
+<script type="text/javascript" src="./js/fb-script.js"></script>
 
   </head>
 
@@ -45,11 +45,12 @@
             <li role="presentation">
                 <a href="./email-post.html" class="btn"><span class="glyphicon glyphicon-envelope"></span> Email</a>
             </li>
-            <li role="presentation"><a href="#">About</a></li>
+            <li role="presentation"><a href="./about.html" target="_blank" class="btn"><span class="glyphicon glyphicon-registration-mark"></span> About</a></li>
             <li role="presentation"><a href="#">How-to</a></li>
+
           </ul>
         </nav>
-        <h3 class="text-muted"> <img style="width:190px;height:70px;" src="//localhost/suggestc/pluginassets/logo.png"> </h3>
+        <h3 class="text-muted"> <img style="width:190px;height:70px;" src="//hmc.herokuapp.com/pluginassets/logo.png"> </h3>
       </div>
 
       <div class="jumbotron">
@@ -64,7 +65,8 @@
             <div class="btn-group">
                     <a href="javascript:;" class="btn btn-sm btn-success" onclick="fb_publish()"><span class="glyphicon glyphicon-globe"></span> Post to facebook timeline</a>
                     <a href="javascript:;" class="btn btn-sm btn-warning" onclick="fb_msg_send()"><span class="glyphicon glyphicon-globe"></span> Message a Facebook friend</a>
-</div>
+
+            </div>
         </p>
       </div>
 
@@ -145,9 +147,9 @@
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   </body>
 </html>
