--- a/fb-post.html
+++ b/fb-post.html
@@ -83,7 +83,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <img src="http://ecx.images-amazon.com/images/I/816ojoGcyzL._SL1500_.jpg" alt="">
                     <div class="caption">
                         <h4>Product</h4>
                         <p>Brand info</p>
@@ -96,7 +96,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <img src="https://farm3.staticflickr.com/2676/cameras/72157614807901944_model_huge_d015324180.jpg" alt="">
                     <div class="caption">
                         <h4>Product</h4>
                         <p>Brand info</p>
@@ -109,7 +109,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <img src="http://ecx.images-amazon.com/images/I/61d1sNofahL._SL1500_.jpg" alt="">
                     <div class="caption">
                         <h4>Product</h4>
                         <p>Brand info</p>
@@ -122,7 +122,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <img src="http://ecx.images-amazon.com/images/I/816ojoGcyzL._SL1500_.jpg" alt="">
                     <div class="caption">
                         <h4>Product</h4>
                         <p>Brand info</p>
