close button added

--- a/email-post.html
+++ b/email-post.html
@@ -63,6 +63,7 @@
             </li>
             <li role="presentation"><a href="./about.html" target="_blank" class="btn"><span class="glyphicon glyphicon-registration-mark"></span> About</a></li>
             <li role="presentation"><a href="#">How-to</a></li>
+            <li role="presentation"><a href="javascript:window.close();" class="btn"><span class="glyphicon glyphicon-remove-sign"></span> </a></li>
 
           </ul>
         </nav>
