--- a/fb-post.html
+++ b/fb-post.html
@@ -47,7 +47,8 @@
             </li>
             <li role="presentation"><a href="./about.html" target="_blank" class="btn"><span class="glyphicon glyphicon-registration-mark"></span> About</a></li>
             <li role="presentation"><a href="#">How-to</a></li>
-
+            <li role="presentation"><a href="javascript:window.close();" class="btn"><span class="glyphicon glyphicon-remove-sign"></span> </a></li>
+            
           </ul>
         </nav>
         <h3 class="text-muted"> <img style="width:190px;height:70px;" src="//hmc.herokuapp.com/pluginassets/logo.png"> </h3>
