about page content added

--- a/email-post.html
+++ b/email-post.html
@@ -23,6 +23,10 @@
             color: #fff;
             background-color: #bf0000;
             }
+            
+            .jumbotron {
+                background-color: rgba(207, 207, 207, 0.51);
+            }
         .jumbotron .btn {
             padding: 14px 24px;
             font-size: 14px;
@@ -46,8 +50,6 @@
         }
 </style>
 
-
-
   </head>
 
   <body>
@@ -62,7 +64,7 @@
                 <a href="./email-post.html" class="btn"><span class="glyphicon glyphicon-envelope"></span> Email</a>
             </li>
             <li role="presentation"><a href="./about.html" target="_blank" class="btn"><span class="glyphicon glyphicon-registration-mark"></span> About</a></li>
-            <li role="presentation"><a href="#">How-to</a></li>
+            <li role="presentation"><a href="#" class="btn"><span class="glyphicon glyphicon-film"></span> Demo</a></li>
             <li role="presentation"><a href="javascript:window.close();" class="btn"><span class="glyphicon glyphicon-remove-sign"></span> </a></li>
 
           </ul>
