--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="//global.rakuten.com/en/favicon.ico">
+    <link rel="shortcut icon" href="http://global.rakuten.com/en/favicon.ico">
 
     <title>HelpMeChoose - About</title>
 
@@ -23,7 +23,8 @@
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
 
-  background-color: rgba(207, 207, 207, 0.51);
+background-color: rgba(207, 207, 207, 0.51);
+  
             
 }
 .jumbotron .btn {
@@ -247,12 +248,12 @@
       <div class="jumbotron" style="max-width: 700px;margin: auto;">
 
         <h2 style="color:#3b5998;">
-        <img width="50px" height="50px;" src="./images/icon.png">
+        <img width="50px" height="50px;" src="//global.rakuten.com/en/favicon.ico">
         Help Me Choose !</h2>
         <p class="lead">Create fun polls and ask your family, friends and followers to Help You Choose what to buy!</p>
         <p> 
-        <div class="alert alert-info" role="alert">To get started, drag & drop the <strong>Help Me Choose</strong> Bookmarklet to your bookmarks bar.</div>
-            <a title="HelpMeChoose" class="btn btn-lg btn-success" href="javascript:void((function()%7Bvar e%3Ddocument.createElement(%27script%27)%3Be.setAttribute(%27type%27,%27text/javascript%27)%3Be.setAttribute(%27charset%27,%27UTF-8%27)%3Be.setAttribute(%27src%27,%27//hmc.herokuapp.com/js/plugin.js%3Fr%3D%27%2BMath.random()*99999999)%3Bdocument.body.appendChild(e)%7D)())%3B" onclick="alert('Drag me to the bookmarks toolbar'); return false;" role="button">HelpMeChoose-Bookmarklet</a>
+        <div class="alert alert-info" role="alert">To get started, drag & drop the <strong>Help Me Choose</strong> <a href="http://en.wikipedia.org/wiki/Bookmarklet" target="_blank" style="text-decoration:underline;">Bookmarklet</a> to your bookmarks bar.</div>
+            <a title="HelpMeChoose" class="btn btn-lg btn-success" href="javascript:void((function()%7Bvar e%3Ddocument.createElement(%27script%27)%3Be.setAttribute(%27type%27,%27text/javascript%27)%3Be.setAttribute(%27charset%27,%27UTF-8%27)%3Be.setAttribute(%27src%27,%27//hmc.herokuapp.com/js/plugin.js%3Fr%3D%27%2BMath.random()*99999999)%3Bdocument.body.appendChild(e)%7D)())%3B" onclick="alert('Drag me to the bookmarks toolbar'); return false;" role="button">Help Me Choose-Bookmarklet</a>
         </p>
       </div>
 
