--- a/response-form.html
+++ b/response-form.html
@@ -19,7 +19,7 @@
         <div> 
             
             <div id="logo" style="float:center;cursor:pointer;top: 15px;left: 50%;position: fixed;margin-bottom: 0;margin-left: -66px;margin-top: 0;z-index: 6000;height: auto;width: auto;">
-                <img style="width:206px;height:70px;" src="//localhost/suggestc/pluginassets/logo.png" />
+                <img style="width:206px;height:70px;" src="//hmc.herokuapp.com/pluginassets/logo.png" />
             </div> 
             
             <div style="clear:both;"></div>
