--- a/email-post.html
+++ b/email-post.html
@@ -63,8 +63,11 @@
             <li role="presentation" class="active">
                 <a href="./email-post.html" class="btn"><span class="glyphicon glyphicon-envelope"></span> Email</a>
             </li>
+            <li role="presentation">
+                <a href="./pollresults.html" class="btn"><span class="glyphicon glyphicon-stats"></span> Poll-Results</a>
+            </li>
             <li role="presentation"><a href="./about.html" target="_blank" class="btn"><span class="glyphicon glyphicon-registration-mark"></span> About</a></li>
-            <li role="presentation"><a href="#" class="btn"><span class="glyphicon glyphicon-film"></span> Demo</a></li>
+            <li role="presentation"><a href="./demo.html" target="=_blank" class="btn"><span class="glyphicon glyphicon-film"></span> Demo</a></li>
             <li role="presentation"><a href="javascript:window.close();" class="btn"><span class="glyphicon glyphicon-remove-sign"></span> </a></li>
 
           </ul>
@@ -101,7 +104,7 @@
                         <form role="form" class="form-horizontal">
                             <div class="form-group">
                               <label class="col-sm-2" for="inputTo">To</label>
-                              <div class="col-sm-10"><input type="email" class="form-control" id="inputTo" placeholder="Start typing contact name..."></div>
+                              <div class="col-sm-10"><input type="email" class="form-control" id="inputTo" placeholder="Start typing contact name..." data-validate="required, email" data-required-message="Email address missing"></div>
                             </div>
                             <div class="form-group">
                               <label class="col-sm-2" for="inputSubject">Subject</label>
@@ -343,7 +346,7 @@
                         <!-- <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button> 
                         <button type="button" class="btn btn-warning pull-left">Save Draft</button> -->
                         <button id="send-button" href="#" class="btn btn-lg"><span class="glyphicon glyphicon-send"></span> Send</button>
-                        
+                        <p class="help-block"></p>
                       </div>
                     </div><!-- /.modal-content -->
                   </div><!-- /.modal-dialog -->
@@ -373,5 +376,6 @@
 
 <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="./js/validator.js"></script>
   </body>
 </html>
