--- a/pollresults.html
+++ b/pollresults.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="//global.rakuten.com/en/favicon.ico">
 
-    <title>HelpMeChoose - Facebook</title>
+    <title>HelpMeChoose - Results</title>
 
 <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -23,16 +22,10 @@
             color: #fff;
             background-color: #bf0000;
             }
-             .jumbotron {
-                background-color: rgba(207, 207, 207, 0.51);
-            }
-        .jumbotron .btn {
-            padding: 14px 24px;
-            font-size: 14px;
-        }
+
 </style>
 
-<script type="text/javascript" src="./js/fb-script.js"></script>
+
 
   </head>
 
@@ -42,14 +35,14 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active">
-                <a href="#" class="btn"><span class="glyphicon glyphicon-thumbs-up"></span> Facebook</a>
+            <li role="presentation">
+                <a href="./fb-post.html" class="btn"><span class="glyphicon glyphicon-thumbs-up"></span> Facebook</a>
             </li>
             <li role="presentation">
                 <a href="./email-post.html" class="btn"><span class="glyphicon glyphicon-envelope"></span> Email</a>
             </li>
-             <li role="presentation">
-                <a href="./pollresults.html" class="btn"><span class="glyphicon glyphicon-stats"></span> Poll-Results</a>
+             <li role="presentation" class="active">
+                <a href="#" class="btn"><span class="glyphicon glyphicon-stats"></span> Poll-Results</a>
             </li>
             <li role="presentation"><a href="./about.html" target="_blank" class="btn"><span class="glyphicon glyphicon-registration-mark"></span> About</a></li>
             <li role="presentation"><a href="./demo.html" target="=_blank" class="btn"><span class="glyphicon glyphicon-film"></span> Demo</a></li>
@@ -60,34 +53,18 @@
         <h3 class="text-muted"> <img style="width:190px;height:70px;" src="//hmc.herokuapp.com/pluginassets/logo.png"> </h3>
       </div>
 
-      <div class="jumbotron">
-
-        <h2 style="color:#3b5998;">
-        <img width="50px" height="50px;" src="http://megaicons.net/static/img/icons_sizes/6/140/512/fb-icon.png">
-        Facebook</h2>
-        <p class="lead">Use the Facebook service to ask your friends/family to help you choose the products you want to buy.</p>
-        <p>
-            
-
-            <div class="btn-group">
-                    <a href="javascript:;" class="btn btn-sm btn-success" onclick="fb_publish()"><span class="glyphicon glyphicon-globe"></span> Post to facebook timeline</a>
-                    <a href="javascript:;" class="btn btn-sm btn-warning" onclick="fb_msg_send()"><span class="glyphicon glyphicon-globe"></span> Message a Facebook friend</a>
-
-            </div>
-        </p>
-      </div>
 
       <!-- Title -->
         <div class="row">
             <div class="col-lg-12">
-                <h3>Selected Products</h3>
+                <h3>Recent Polls<span class="label label-success">Results</span></h3>
             </div>
         </div>
         <!-- /.row -->
 
         <!-- Page Features -->
         <div class="row text-center">
-
+        <hr>
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
                     <img src="http://ecx.images-amazon.com/images/I/816ojoGcyzL._SL1500_.jpg" alt="">
@@ -97,6 +74,8 @@
                         <p>
                              <a href="#" class="btn btn-default">More Info</a>
                         </p>
+                         <hr>
+                        <button class="btn btn-primary" type="button">Upvotes <span class="badge">4</span></button>
                     </div>
                 </div>
             </div>
@@ -108,8 +87,11 @@
                         <h4>Product</h4>
                         <p>Brand info</p>
                         <p>
+
                              <a href="#" class="btn btn-default">More Info</a>
                         </p>
+                        <hr>
+                        <button class="btn btn-primary" type="button">Upvotes <span class="badge">4</span></button>
                     </div>
                 </div>
             </div>
@@ -123,6 +105,8 @@
                         <p>
                              <a href="#" class="btn btn-default">More Info</a>
                         </p>
+                         <hr>
+                        <button class="btn btn-primary" type="button">Upvotes <span class="badge">4</span></button>
                     </div>
                 </div>
             </div>
@@ -136,6 +120,8 @@
                         <p>
                              <a href="#" class="btn btn-default">More Info</a>
                         </p>
+                         <hr>
+                        <button class="btn btn-primary" type="button">Upvotes <span class="badge">4</span></button>
                     </div>
                 </div>
             </div>
@@ -143,9 +129,10 @@
 
         </div>
 
+
+
+
         <!-- /.row -->
-
-
       <footer class="footer">
         <p>&copy; Team-Quadra @Rakuten 2014</p>
       </footer>
