--- a/demo.html
+++ b/demo.html
@@ -53,16 +53,16 @@
 
       <div class="jumbotron">
 
-<!--       <video id="example_video_1" class="video-js vjs-default-skin"
+      <video id="example_video_1" class="video-js vjs-default-skin"
   controls preload="auto" width="auto" height="350"
   poster="http://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTjIre-bIXwia_CNQIgQmj1ZUKLlGdH-yBi-nmuzUAw9XLQRKA2fg"
   data-setup='{"example_option":true}'>
  <source src="http://youtu.be/gU1M58QoQXw" type='video/mp4' />
 
  <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
-</video> -->
+</video>
 
-  <embed width="auto" height="350" src="//youtu.be/gU1M58QoQXw">
+<!--   <embed width="auto" height="350" src="//youtu.be/gU1M58QoQXw"> -->
 
       </div>
 
