--- a/demo.html
+++ b/demo.html
@@ -63,7 +63,7 @@
 </video> -->
 
 <iframe title="YouTube video player" class="youtube-player" type="text/html" 
-width="auto" height="350" src="http://www.youtube.com/watch?v=gU1M58QoQXw"
+width="auto" height="350" src="https://www.youtube.com/watch?v=gU1M58QoQXw"
 frameborder="0" allowFullScreen></iframe>
 
       </div>
